<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
 >
	
   <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/header_bg">
       
        <Button
            android:id="@+id/Develop_Button_back"
            android:layout_width="40dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/back_an"
            />

        <TextView
            android:id="@+id/Develop_tabBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:textSize="18dip"
            android:text="随州新闻" />
         
    </RelativeLayout>
    <TextView
            android:id="@+id/Develop_Text_content1"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="15dip"
            android:background="@android:color/white"
            android:text="@string/this1" />
    <TextView
            android:id="@+id/Develop_Text_content2"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="15dip"
            android:padding="10dp"
            android:background="@android:color/white"
            android:visibility="gone"
            android:text="@string/this2" />
    <TextView
            android:id="@+id/Develop_Text_content3"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="15dip"
            android:visibility="gone"
            android:background="@android:color/white"
            android:text="@string/this3" />
    <TextView
            android:id="@+id/Develop_Text_content4"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="15dip"
            android:padding="10dp"
            android:visibility="gone"
            android:background="@android:color/white"
            android:text="@string/this4" />
    <TextView
            android:id="@+id/Develop_Text_content5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="15dip"
            android:padding="10dp"
            android:gravity="top"
            android:visibility="gone"
            android:background="@android:color/white"
            android:text="@string/this5" />

</LinearLayout>
