<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
 >
	
   <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/header_bg">
       
        <Button
            android:id="@+id/Site_Button_back"
            android:layout_width="40dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/back_an"
            />

        <TextView
            android:id="@+id/Site_tabBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:textSize="18dip"
            android:text="随州新闻" />
         
    </RelativeLayout>
    

	    <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/site_about"
       android:layout_marginLeft="10dp"
       android:layout_marginTop="15dp"
       
       android:textStyle="italic"
       android:textColor="@android:color/black"
       android:textSize="15dip" />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="2dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
	    android:background="@drawable/dline">
	    
	</LinearLayout>
	    <TextView
	        android:id="@+id/Site_bouts"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/site_abouts"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="15dp"
       android:layout_marginBottom="20dp"
       android:textColor="@android:color/black"
       android:textSize="18dip" />

	    <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:textStyle="italic"
       android:text="@string/site_updates"
       android:layout_marginLeft="10dp"
       android:textColor="@android:color/black"
       android:textSize="15dip" />

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="2dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
	    android:background="@drawable/dline">
	    
	</LinearLayout>

	    <TextView
	        android:id="@+id/Site_update"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
      		android:layout_marginTop="15dp"
      		android:layout_marginBottom="20dp"
	        android:text="@string/site_update"
	        android:textColor="@android:color/black"
	        android:textSize="18dip" />


</LinearLayout>
